# uber-proof

./: .gitignore  README.md  stack.yaml  uber-proof.cabal
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/doc/uber-proof-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/flag-cache/: async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  protolude-0.1.10-EbWghKT4Ra36YSCOzDFDKT  safe-0.3.15-2Yd45VWFfdcKqKyispOifY  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  uber-proof-0.1.0.0-3gRQQgaKbokJNcLHSNxRVU
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/lib/x86_64-linux-ghc-8.0.2/uber-proof-0.1.0.0-3gRQQgaKbokJNcLHSNxRVU/: Expenses.dyn_hi  Expenses.hi  Reconciliation.dyn_hi  Reconciliation.hi  SeleniumProcess.dyn_hi  SeleniumProcess.hi
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/lib/x86_64-linux-ghc-8.0.2/uber-proof-0.1.0.0-3gRQQgaKbokJNcLHSNxRVU/Types/: Expenses.hi  UberTrip.dyn_hi  UberTrip.hi
.stack-work/install/x86_64-linux/lts-9.2/8.0.2/pkgdb/: package.cache  uber-proof-0.1.0.0-3gRQQgaKbokJNcLHSNxRVU.conf
app/: Main.hs  Options.hs
src/: Expenses.hs  Reconciliation.hs  SeleniumProcess.hs  SeleniumScrape.hs  SeleniumUtils.hs  UberScrape.hs  Uberlude.hs
src/Types/: Expenses.hs  Reconciliation.hs  Uber.hs  UberTrip.hs
src/Types/Expenses/: Currency.hs
test/: Spec.hs
