name:                uber-proof
version:             0.1.0.0
homepage:            https://github.com/joemshanahan/uber-proof#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          JoeMShanahan@github
copyright:           2017 Joe Shanahan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Expenses
                       Reconciliation
                       UberScrape
                       Types.Expenses
                       Types.Uber
                       Types.Reconciliation
                       Uberlude
  build-depends:       base
                     , lifted-base
                     , friday
                     , hashable
                     , HUnit
                     , lifted-async
                     , process
                     , protolude
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , webdriver
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable uber-proof
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Options
  build-depends:       base
                     , uber-proof
                     , optparse-applicative
                     , network-uri
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite uber-proof-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app, src
  main-is:             Spec.hs
  build-depends:       base
                     , hashable
                     , hspec
                     , protolude
                     , uber-proof
                     , text
                     , lifted-async
                     , webdriver
                     , unordered-containers
                     , optparse-applicative
                     , time
                     , uuid
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/joemshanahan/uber-proof
