name:                uber-proof
version:             0.1.0.0
homepage:            https://github.com/joemshanahan/uber-proof#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          JoeMShanahan@github
copyright:           2017 Joe Shanahan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Expenses
                       Options
                       Reconciliation
                       SeleniumUtils
                       Types.Expenses
                       Types.Expenses.Currency
                       Types.Uber
                       Types.Reconciliation
                       UberScrape
                       Uberlude
  build-depends:       base
                     , aeson
                     , ansi-terminal
                     , attoparsec
                     , lifted-base
                     , friday
                     , friday-devil
                     , bytestring
                     , hashable
                     , HUnit
                     , lifted-async
                     , lifted-base
                     , process
                     , protolude
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , webdriver
                     , optparse-applicative
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable uber-proof
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       
  build-depends:       base
                     , bytestring
                     , directory
                     , network-uri
                     , text
                     , time
                     , uber-proof
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite uber-proof-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , attoparsec
                     , uber-proof
                     , time
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/joemshanahan/uber-proof
